Fixed issue with diagonal images behind modal

--- a/css/projects.css
+++ b/css/projects.css
@@ -183,7 +183,7 @@ section.projects .imagery.active {
 }
 .projects-collage.active {
     
-    z-index: 10;
+    z-index: 9;
     /* grid-column-start: -1; */
     width: 100%;
     height: 100%;
